Fix header size on mobile

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -2,7 +2,7 @@ header {
   position: absolute;
   top: 20px;
   left: 20px;
-  width: 25%;
+  width: 200px;
   z-index: 10;
 }
 header .logo {
